Aktualisiere die .env.example mit neuen Konfigurationen für den Bericht und aktualisiere die Abhängigkeiten in package.json und yarn.lock auf die neuesten Versionen.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # URL for BITV compliance testing
 TARGET_URL=https://example.com
 
-# Additional configurations can be added here
-NODE_ENV=development 
+# Additional configurations
+NODE_ENV=development
+
+# Report configuration
+REPORT_TITLE=BITV Accessibility Audit Report
+REPORT_LANGUAGE=de 
