--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "axe-core": "^4.10.3",
     "axios": "^1.8.4",
     "canvas": "^3.1.0",
+    "chalk": "4",
     "chart.js": "^4.4.9",
     "cheerio": "^1.0.0",
     "chrome-launcher": "^1.1.2",
     "color-parse": "^2.0.2",
     "dotenv": "^16.5.0",
     "lighthouse": "^12.5.1",
+    "log-symbols": "^7.0.0",
     "pa11y": "^8.0.0",
     "pdfkit": "^0.17.0",
     "playwright": "^1.51.1",
