Refactor accessibility check code and improve logging
- Updated fixSuggestion formatting in bitvChecks.js for better readability.
- Added missing commas in colorExtractor.js to ensure proper object structure.
- Enhanced logging messages in main.js for better user feedback during execution.
- Streamlined PDF report generation in PdfReportGenerator.js for improved clarity.
- Fixed URL path handling in generate-pdf.js for correct data retrieval.
- Improved helper functions in helpers.js for better code consistency.
- Enhanced logger.js to provide clearer output formatting.
- Refactored run-checks.js to improve error handling and maintainability.

--- a/package.json
+++ b/package.json
@@ -13,12 +13,7 @@
     "check": "./node_modules/.bin/biome check --apply .",
     "check:ci": "./node_modules/.bin/biome ci ."
   },
-  "keywords": [
-    "accessibility",
-    "BITV",
-    "audit",
-    "testing"
-  ],
+  "keywords": ["accessibility", "BITV", "audit", "testing"],
   "author": "Casian Blanaru Pixelcoda (https://pixelcoda.de)",
   "homepage": "https://pixelcoda.de",
   "repository": {
